<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_filter"
        android:title="@string/menu_filter"
        android:icon="@drawable/ic_filter_list"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_clear"
        android:title="@string/menu_clear"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_save_to_remote"
        android:title="@string/save_to_remote"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_save_to_local"
        android:title="@string/save_to_local"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_synchronize"
        android:title="@string/synchronize"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_delete_db_tasks"
        android:title="@string/delete_all_db_tasks"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_delete_remote_tasks"
        android:title="@string/delete_all_remote_tasks"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clear_app_data"
        android:title="@string/clear_app_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_log_out"
        android:title="@string/log_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_log_in"
        android:title="@string/log_in"
        app:showAsAction="never" />
</menu>