<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.example.android.architecture.blueprints.todoapp.login.LoginViewModel" />

        <variable
            name="listener"
            type="com.example.android.architecture.blueprints.todoapp.login.UserActionsNavigationListener" />

    </data>

    <LinearLayout
        android:id="@+id/fragment_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="124dp"
        android:paddingRight="24dp">

        <RelativeLayout
            android:id="@+id/loginBottomView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@color/colorPrimary"
            android:padding="15dp">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginStayLoggedIn"
                android:onClick="@{()-> listener.onLoginClicked()}"
                android:text="Login"
                android:textAllCaps="false" />

            <CheckBox
                android:id="@+id/loginStayLoggedIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginRememberMe"
                android:text="@string/stay_logged_in"
                android:textColor="@color/colorGrey" />

            <CheckBox
                android:id="@+id/loginRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginPassword"
                android:text="@string/remember_me"
                android:textColor="@color/colorGrey" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_below="@id/loginEmail"
                android:hint="@string/password"
                android:text="@={viewmodel.user.password}"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/email"
                android:text="@={viewmodel.user.email}"
                android:inputType="textEmailAddress"/>


            <TextView
                android:id="@+id/loginRegisterLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:onClick="@{()-> listener.onRegisterClicked()}"
                android:text="@string/register_link_text"
                android:textColor="@color/colorAccent" />

        </RelativeLayout>

        <View
            android:id="@+id/loginTopView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />

    </LinearLayout>




</layout>