<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewmodel"
            type="com.example.android.architecture.blueprints.todoapp.taskdetail.TaskDetailViewModel"/>

        <variable
            name="listener"
            type="com.example.android.architecture.blueprints.todoapp.taskdetail.TaskDetailUserActionsListener"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.example.android.architecture.blueprints.todoapp.ScrollChildSwipeRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:onRefreshListener="@{viewmodel::onRefresh}"
            app:refreshing="@{viewmodel.dataLoading}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:visibility="@{viewmodel.isDataAvailable ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:visibility="@{viewmodel.isDataAvailable ? View.VISIBLE : View.GONE}">

                <!-- android:paddingTop specified to temporarily work around -->
                <!-- https://github.com/robolectric/robolectric/issues/4588 -->
                <CheckBox
                    android:id="@+id/task_detail_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:onClick="@{(view) -> listener.onCompleteChanged(view)}"
                    android:paddingTop="1dp"
                    android:checked="@{viewmodel.completed}" />

                <TextView
                    android:id="@+id/task_detail_title"
                    android:layout_toRightOf="@id/task_detail_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="1dp"
                    android:text="@{viewmodel.task.title}"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                    <CheckBox
                        android:id="@+id/task_detail_favorite"
                        android:layout_toRightOf="@id/task_detail_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="32dp"
                        android:onClick="@{(view) -> listener.onFavoriteChanged(view)}"
                        android:paddingTop="1dp"
                        android:checked="@{viewmodel.favorite}"
                        android:button="@android:drawable/btn_star"/>

                <TextView
                    android:id="@+id/task_detail_description"
                    android:layout_toRightOf="@id/task_detail_complete"
                    android:layout_below="@id/task_detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="1dp"
                    android:text="@{viewmodel.task.description}"
                    android:textAppearance="?android:attr/textAppearanceMedium" />


                    <TextView
                        android:id="@+id/task_due_date_header"
                        android:layout_toRightOf="@id/task_detail_complete"
                        android:layout_below="@id/task_detail_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:text="Date"
                        android:textColor="@color/colorAccent"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/task_due_date"
                        android:layout_toRightOf="@id/task_detail_complete"
                        android:layout_below="@id/task_due_date_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="2dp"
                        android:hint="@string/due_date_hint"
                        android:text="@{viewmodel.dueDate}"
                        android:onClick="@{(view) -> listener.onDueDateChanged(view)}"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <View
                        android:id="@+id/seperator_due_date"
                        android:layout_width="match_parent"
                        android:layout_toRightOf="@id/task_detail_complete"
                        android:layout_below="@id/task_due_date"
                        android:layout_height="1dp"
                        android:background="@color/colorAccent"/>

                    <TextView
                        android:id="@+id/task_time_header"
                        android:layout_toRightOf="@id/task_detail_complete"
                        android:layout_below="@id/seperator_due_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time"
                        android:paddingTop="10dp"
                        android:textColor="@color/colorAccent"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/task_time"
                        android:layout_toRightOf="@id/task_detail_complete"
                        android:layout_below="@id/task_time_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="2dp"
                        android:hint="@string/time_hint"
                        android:text="@{viewmodel.time}"
                        android:onClick="@{(view) -> listener.onTimeChanged(view)}"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <View
                        android:id="@+id/separator_time"
                        android:layout_width="match_parent"
                        android:layout_toRightOf="@id/task_detail_complete"
                        android:layout_below="@id/task_time"
                        android:layout_height="1dp"
                        android:background="@color/colorAccent"/>

                    <LinearLayout
                        android:id="@+id/task_contacts_header_container"
                        android:layout_below="@id/separator_time"
                        android:layout_toRightOf="@id/task_detail_complete"
                        android:weightSum="1"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/task_contacts_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:text="Contacs"
                        android:paddingTop="20dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textAppearance="?android:attr/textAppearanceMedium" />


                    <Button
                        android:id="@+id/add_contact_button"
                        android:gravity="right"
                        android:layout_gravity="bottom"
                        android:paddingTop="20dp"
                        android:layout_weight="0.2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:onClick="@{(view) -> listener.onAddContactClicked(view)}"
                        android:background="@drawable/ic_add"
                        android:backgroundTint="@color/colorGrey"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/task_contact_name"
                        android:layout_toRightOf="@id/task_detail_complete"
                        android:layout_below="@id/task_contacts_header_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="2dp"
                        android:text="@{viewmodel.contactName}"
                        android:hint="@string/no_contact_hint"
                        android:textAppearance="?android:attr/textAppearanceSmall" />


                    <View
                        android:id="@+id/separator_contacs"
                        android:layout_width="match_parent"
                        android:layout_toRightOf="@id/task_detail_complete"
                        android:layout_below="@id/task_contact_name"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"/>




                </RelativeLayout>
            </LinearLayout>
        </com.example.android.architecture.blueprints.todoapp.ScrollChildSwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_edit_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_edit"
            app:fabSize="normal"
            app:layout_anchor="@id/refresh_layout"
            app:layout_anchorGravity="bottom|right|end"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
